<resources>
    <string name="app_name">Proyecto_SanzPansAntonio</string>
    <!-- GENERAL -->
    <string name="ACEPT">Aceptar</string>
    <string name="CANCEL">Cancelar</string>
    <string name="BACK">Volver</string>
    <string name="hint_day">DD</string>
    <string name="hint_month">MM</string>
    <string name="hint_year">YYYY</string>
    <string name="hint_hour">hh</string>
    <string name="hint_min">mm</string>
    <!-- TITULOS -->
    <string name="index">Index</string>
    <string name="login">Login</string>
    <string name="calendar">Calendario</string>
    <string name="create_game">Crear partida</string>
    <string name="create_user">Crear usuario</string>
    <string name="my_games">Mis partidas</string>
    <string name="search_game">Buscar partida</string>
    <!-- ERRORES -->
    <string name="error_user_1">El usuario es incorrecto</string>
    <string name="error_password_1">La contraseña es incorrecta</string>
    <string name="error_login">El usuario o la contraseña son incorrectos</string>
    <!-- INDEX -->
    <string name="index_create_game">Crear partida</string>
    <string name="index_search_games">Buscar partidas</string>
    <string name="index_my_games">Mis partidas</string>
    <string name="index_calendar">Calendario</string>
    <string name="index_options">Opciones</string>
    <!-- CREATE GAME -->
    <string name="create_name">Juego</string>
    <string name="create_date">Fecha</string>
    <string name="create_hour">Hora (24h)</string>
    <string name="create_time">Duración (h)</string>
    <string name="create_address">Dirección</string>
    <string name="create_players">Jugadores</string>
    <string name="create_doc">Documentos</string>

    <!-- CREATE USER -->
    <string name="createuser_username">Nombre de usuario</string>
    <string name="createuser_realname">Nombre real</string>
    <string name="createuser_lastname">Apellidos</string>
    <string name="createuser_password">Contraseña</string>
    <string name="createuser_confirmpassword">Repetir contraseña</string>
    <string name="createuser_mail">Mail</string>
    <string name="createuser_confirmmail">Repetir Mail</string>
    <string name="createuser_date">Año de nacimiento</string>
    <string name="createuser_title">Crear usuario</string>

    <!-- CALENDAR -->

    <!-- LOGIN -->
    <string name="login_user">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_create_acc">¿No tienes cuenta?</string>
    <string name="login_signup">Regístrate</string>
    <!-- MY GAMES -->

    <!-- SEARCH GAME -->

    <!-- OPTIONS -->
    <string name="change_user_name">Cambiar nombre de usuario</string>
    <string name="change_user_mail">Cambiar mail</string>
    <string name="change_user_password">Cambiar contraseña</string>
    <string name="delete_user_account">Borrar cuenta</string>
    <string name="user_profile_updated">Perfil de usuario actualizado</string>
    <string name="user_mail_updated">Correo electrónico actualizado</string>
    <string name="user_password_updated">Contraseña actualizada</string>
    <string name="user_account_deleted">Su cuenta ha sido eliminada correctamente</string>
    <string name="new_user_name">Nuevo nombre de usuario</string>
    <string name="new_user_password">Nueva contraseña</string>
    <string name="new_user_password_confirm">Confirmar nueva contraseña</string>
    <string name="new_user_mail">Nuevo mail</string>
    <string name="are_you_sure">¿Estás seguro?</string>

</resources>