<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/body_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_user" />

        <EditText
            android:id="@+id/txtUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="admin@admin.com"
            android:visibility="visible" />

        <TextView
            android:id="@+id/lbUserError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_user_1"
            android:textColor="#F44336"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_password" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            android:text="administrador" />

        <TextView
            android:id="@+id/lbPasswordError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_password_1"
            android:textColor="#F44336"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbLoginError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_login"
            android:textAlignment="center"
            android:textColor="#F44336"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbCreateText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/login_create_acc"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lbSignUp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:onClick="changeToCreateUser"
            android:text="@string/login_signup"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>